--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Hello Django</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-        <script src="{% static 'js/libs/react.min.js' %}"></script>
+        <script src="{% static 'js/libs-nomin/react.js' %}"></script>
         <script src="{% static 'js/libs/react-dom.min.js' %}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/2.4.1/ReactRouter.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 
     </head>
